# RControlPanel

./: CMakeLists.txt  README.md  reactos2rcp.sh  winmain.c
reactos/: buildno.h  debug.h
